Improved the existing runs API
